update profile_pic to fit better

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Taufiq Rashid"
 title_separator          : "-"
 name                     : &name "Taufiq Rashid"
-description              : &description " Des Research Assistant at World Resources Institute"
+description              : &description ""
 url                      : https://taufiq06.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "taufiq06.github.io"
