--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Taufiq Rashid"
   avatar           : "profile_pic.jpg"
   bio              : "Research Assistant at World Resources Institute"
-  location         : "Location"
+  location         : "Brentwood, MD"
   employer         :
   pubmed           : 
   googlescholar    : 
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/Taufiq06"
+  github           : "Taufiq06"
   google_plus      :
   keybase          :
   instagram        :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/TaufiqRashid06"
+  twitter          : "TaufiqRashid06"
   vine             :
   weibo            :
   xing             :
