--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Taufiq Rashid"
   avatar           : "profile_pic.jpg"
-  bio              : "Research Assistant at World Resources Institute"
-  location         : "Brentwood, MD"
+  bio              : "PhD student at Auburn University"
+  location         : "Auburn, AL"
   employer         :
   pubmed           : 
   googlescholar    : 
